--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,3 +1,6 @@
+@use 'mixins.scss';
+
+
 * {
     margin:0;
     padding:0;
@@ -24,6 +27,10 @@ z-index:100 ;
 
 &__logo{
     width: 140px;
+
+    @include mixins.phone {
+        width: 50px;
+    }
 }
 }
 
@@ -52,13 +59,35 @@ z-index:100 ;
         justify-content:center;
         font-size:56px;
         font-weight: 700;
+
+
+        @include mixins.desktop {
+            font-size: 60px; 
+            margin-top: 200px;	
+        }
+        @include mixins.laptop{
+            margin-top: 200px;	
+        }
+        @include mixins.landscape-tablet{
+            margin-top: 200px;	
+        }
+
                   }
 
        &__heading3{
         
         font-size: 32px;
         font-weight: 700;
-    color:#00abf0;
+        color:#00abf0;
+
+        @include mixins.desktop {
+            font-size: 30px;
+        }
+        @include mixins.laptop{
+            font-size: 25px; 
+        }
+
+
        }
           }
 }
@@ -70,6 +99,29 @@ z-index:100 ;
     padding: 80px 0;
     background-color:#081b29;
     border-top:60px solid #ededed;
+
+
+    @include mixins.desktop {
+		flex-direction: row;
+		justify-content: space-around;
+		margin-top: 20px;
+		margin-left: 50px;
+		margin-right: 50px;
+		padding: 20px 40px;	
+
+	}	
+
+	@include mixins.laptop {
+		flex-direction: row;
+		justify-content: space-around;
+		margin-top: 40px;
+		margin-left: 50px;
+		margin-right: 50px;
+		padding: 20px 40px;
+    }
+
+
+
 }
 .row{
     display: flex;
@@ -104,7 +156,9 @@ text-align: justify;
 .sub-title{
     font-size: 60px;
     font-weight: 600;
-    color: #081b29;
+    color:white;
+    padding: 60px 50px;
+
 }
 
 
@@ -129,6 +183,28 @@ text-align: justify;
 	padding: 50px 40px;
 	text-align:left;
 	color:#081b29;
+
+    @include mixins.phone {
+        font-size: 30px;  
+          margin-top: 50px;
+          margin-bottom: 20px;
+      }
+      @include mixins.tablet {
+        font-size: 30px;  
+          margin-top: 80px;
+          margin-bottom: 20px;
+      }
+      @include mixins.landscape-tablet {
+        font-size: 32px;  
+          margin-top: 80px;
+          margin-bottom: 20px;
+      }
+      @include mixins.laptop {
+        font-size: 35px;  
+          margin-bottom: 10px;
+      }
+
+
     }
 
     &__list{
@@ -153,6 +229,25 @@ text-align: justify;
                 padding-right: 30px;
                 padding-left: 30px;
                 color:#081b29;
+
+                @include mixins.phone {
+					font-size: 20px;  
+					margin-top: 15px;
+				}
+				@include mixins.tablet {
+					font-size: 22px;  
+					margin-top: 18px;
+				}
+				@include mixins.landscape-tablet {
+					font-size: 22px;  
+				}
+				@include mixins.laptop {
+					font-size: 25px;  
+				}
+
+
+
+
               }
           }
       }
@@ -246,6 +341,12 @@ justify-content:space-between;
 align-items: center;
 color:#081b29;
 
+@include mixins.phone {
+    max-height: 50px;
+  padding: 10px 5%;
+ }	
+
+
 &__heading{
     padding: 10px 30%;
     color: #081b29;
@@ -261,6 +362,17 @@ color:#081b29;
         align-items:center;
         flex-direction:row;
         flex-wrap:nowrap;
+
+
+        @include mixins.phone {
+            font-size: 14px;
+         }	
+         @include mixins.tablet {
+            font-size: 15px;
+         }	
+         @include mixins.landscape-tablet {
+            font-size: 16px;
+         }	
         
            }
          }
@@ -273,4 +385,8 @@ color:#081b29;
         padding-right:15px;
            }
          }        
+}
+@media screen and (max-width: 600px) {
+
+  
 }
