--- a/styles/style.css
+++ b/styles/style.css
@@ -27,11 +27,11 @@ body {
 }
 @media only screen and (max-width: 576px) {
   .header__logo {
-    width: 50px;
+    width: auto;
   }
 }
 
-.navbar a {
+.navbar__link {
   font-size: 20px;
   color: #081b29;
   text-decoration: none;
@@ -89,19 +89,19 @@ body {
 
 /*--------------About Me---------------*/
 .about {
-  padding: 80px 0;
+  padding: 100px 0;
   background-color: #081b29;
-  border-top: 60px solid #ededed;
-}
-@media only screen and (min-width: 1201px) {
-  .about {
-    flex-direction: row;
-    justify-content: space-around;
-    margin-top: 20px;
-    margin-left: 50px;
-    margin-right: 50px;
-    padding: 20px 40px;
-  }
+  border-top: 50px solid #ededed;
+  border-width: 100%;
+  /*@include mixins.desktop {
+  	flex-direction: row;
+  	justify-content: space-around;
+  	margin-top: 20px;
+  	margin-left: 50px;
+  	margin-right: 50px;
+  	padding: 20px 40px;	
+
+  }	*/
 }
 @media only screen and (min-width: 993px) and (max-width: 1200px) {
   .about {
@@ -114,6 +114,27 @@ body {
   }
 }
 
+/*.container{
+    &__row{
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+
+        &__info{
+            flex-basis: 35%;
+            color:#081b29;
+
+            &__img{
+                margin-left: 100px;
+                padding:50px 50px;
+                width:70%;
+                border-radius: 15px;
+            }
+        }
+
+
+    }
+}*/
 .row {
   display: flex;
   justify-content: space-between;
@@ -268,7 +289,11 @@ body {
   margin-top: 50px;
   color: black;
 }
-
+.project__container__list h2 {
+  font-size: 30px;
+  font-weight: 500;
+  margin-bottom: 15px;
+}
 .project__container__list div {
   background: white;
   padding: 40px;
@@ -278,31 +303,40 @@ body {
   transition: background 0.5s, transform 0.5s;
   color: black;
 }
-
+.project__container__list div:hover {
+  background: lightblue;
+  transform: translateY(-10px);
+}
 .project__container__list div i {
   font-size: 50px;
   margin-bottom: 30px;
 }
 
-.project__container__list h2 {
-  font-size: 30px;
-  font-weight: 500;
-  margin-bottom: 15px;
+/*.project__container__list div{
+    background:white;
+    padding:40px;
+    font-size:13px;
+    font-weight:300;
+    border-radius:10px;
+    transition:background 0.5s, transform 0.5s ;
+    color:black;
+
+}
+.project__container__list div i{
+    font-size: 50px;
+    margin-bottom: 30px;
+}
+.project__container__list h2{
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 15px;
 }
 
-.project__container__list div a {
-  text-decoration: none;
-  color: black;
-  font-size: 12px;
-  margin-top: 20px;
-  display: inline-block;
+.project__container__list div:hover{
+    background:lightblue;
+    transform: translateY(-10px);
 }
-
-.project__container__list div:hover {
-  background: lightblue;
-  transform: translateY(-10px);
-}
-
+*/
 /*----------------------Contact Me/Footer------------------------*/
 .footer {
   width: 100%;
