--- a/styles/style.scss
+++ b/styles/style.scss
@@ -29,22 +29,29 @@ z-index:100 ;
     width: 140px;
 
     @include mixins.phone {
-        width: 50px;
+        width:auto;
     }
 }
 }
 
     
-.navbar a{
+.navbar{
+
+    &__link{
     font-size: 20px;
     color:#081b29;
     text-decoration: none;
     font-weight: 600;
     margin-left: 35px;
     transition: .3px;
+    
+    
+} 
+
 }
 
 /*-------------------HOME-----------------*/
+
 .home{
     height:100vh;
     display:flex;
@@ -89,19 +96,20 @@ z-index:100 ;
 
 
        }
-          }
+    }
 }
 
 
 /*--------------About Me---------------*/
 
 .about{
-    padding: 80px 0;
+    padding: 100px 0;
     background-color:#081b29;
-    border-top:60px solid #ededed;
+    border-top:50px solid #ededed;
+    border-width: 100%;
 
 
-    @include mixins.desktop {
+    /*@include mixins.desktop {
 		flex-direction: row;
 		justify-content: space-around;
 		margin-top: 20px;
@@ -109,7 +117,7 @@ z-index:100 ;
 		margin-right: 50px;
 		padding: 20px 40px;	
 
-	}	
+	}	*/
 
 	@include mixins.laptop {
 		flex-direction: row;
@@ -123,6 +131,27 @@ z-index:100 ;
 
 
 }
+/*.container{
+    &__row{
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+
+        &__info{
+            flex-basis: 35%;
+            color:#081b29;
+
+            &__img{
+                margin-left: 100px;
+                padding:50px 50px;
+                width:70%;
+                border-radius: 15px;
+            }
+        }
+
+    
+    }
+}*/
 .row{
     display: flex;
     justify-content: space-between;
@@ -268,6 +297,7 @@ text-align: justify;
 
     &__container{
 
+
         &__heading{
 
             font-size: 62px;
@@ -285,6 +315,33 @@ text-align: justify;
             grid-gap: 40px;
             margin-top: 50px;
             color:black;
+
+            h2{
+                font-size: 30px;
+                font-weight: 500;
+                margin-bottom: 15px;
+            }
+
+            div{
+                background:white;
+                padding:40px;
+                font-size:13px;
+                font-weight:300;
+                border-radius:10px;
+                transition:background 0.5s, transform 0.5s ;
+                color:black;
+                
+                &:hover{
+                    background:lightblue;
+                    transform: translateY(-10px);
+                }
+                
+                i{
+                font-size: 50px;
+                margin-bottom: 30px; 
+                }
+
+            }
            }
 
         }
@@ -292,7 +349,7 @@ text-align: justify;
 
 }
 
-.project__container__list div{
+/*.project__container__list div{
     background:white;
     padding:40px;
     font-size:13px;
@@ -311,18 +368,12 @@ text-align: justify;
     font-weight: 500;
     margin-bottom: 15px;
 }
-.project__container__list div a{
-    text-decoration: none;
-    color:black;
-    font-size:12px;
-    margin-top:20px;
-    display:inline-block;
-}
+
 .project__container__list div:hover{
     background:lightblue;
     transform: translateY(-10px);
 }
-
+*/
 
   
 /*----------------------Contact Me/Footer------------------------*/
