--- a/styles/style.scss
+++ b/styles/style.scss
@@ -321,6 +321,7 @@ text-align: justify;
                 border-radius:10px;
                 transition:background 0.5s, transform 0.5s ;
                 color:black;
+                text-align:justify;
                 
                 &:hover{
                     background:lightblue;
