--- a/styles/style.css
+++ b/styles/style.css
@@ -290,6 +290,7 @@ body {
   border-radius: 10px;
   transition: background 0.5s, transform 0.5s;
   color: black;
+  text-align: justify;
 }
 .project__container__list div:hover {
   background: lightblue;
